--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+pages_index:
+    path: /
+    controller: App\Controller\DefaultController::index
+
+pages_show:
+    path: /show
+    controller: App\Controller\DefaultController::show
